src/objects/Xero_Contact__c.object
<CustomObject>
    <fields>
        <fullName>ContactID__c</fullName>
        <externalId>true</externalId>
        <label>ContactID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ContactStatus__c</fullName>
        <label>ContactStatus</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DELETED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <label>EmailAddress</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCustomer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsCustomer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSupplier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSupplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDateUTC__c</fullName>
        <label>UpdatedDateUTC</label>
        <type>DateTime</type>
    </fields>
    <label>Xero Contact</label>
    <nameField>
        <label>Xero Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>